# CppQtFluentUi888

./: .clang-format  .gitignore  CMakeLists.txt  CppQtFluentUi888.sln  FluentUI.sln  README.md  README_zh_CN.md  build&pack.bat  clean.bat  dellogs.bat  format.bat  format.sh  package.bat  pushTag.bat
.github/ISSUE_TEMPLATE/: BugReport.md  feature_request.md
.github/workflows/: MacOS-Qt6.5.1.yml  MacOs-Qt6.5.1.yml  Ubuntu-Qt6.5.1.yml  Ubuntu-Qt6.7.1.yml  Windows-Qt6.5.1.yml  Windows-Qt6.7.1.yml  Windows.yml
FluControls/: CMakeLists.txt  FliListViewItem.h  FluATitlePage.cpp  FluATitlePage.h  FluAction.cpp  FluAction.h  FluAmPmView.cpp  FluAmPmView.h  FluAppBarButton.cpp  FluAppBarButton.h  FluAppBarToggleButton.cpp  FluAppBarToggleButton.h  FluAutoSuggestBox.cpp  FluAutoSuggestBox.h  FluBorder.cpp  FluBorder.h  FluBusyProgressRing.cpp  FluBusyProgressRing.h  FluCalendarData.h  FluCalendarDatePicker.cpp  FluCalendarDatePicker.h  FluCalendarDef.h  FluCalendarItem.cpp  FluCalendarItem.h  FluCalendarSelectDayView.cpp  FluCalendarSelectDayView.h  FluCalendarSelectMonthView.cpp  FluCalendarSelectMonthView.h  FluCalendarSelectYearView.cpp  FluCalendarSelectYearView.h  FluCalendarView.cpp  FluCalendarView.h  FluCalendarViewTitle.cpp  FluCalendarViewTitle.h  FluCheckBox.cpp  FluCheckBox.h  FluCircleDot.cpp  FluCircleDot.h  FluCodeBox.cpp  FluCodeBox.h  (+290 more)
FluExamples/: CMakeLists.txt  FluAllGlobalColorDemo.cpp  FluAllGlobalColorDemo.h  FluAnimationDemo.cpp  FluAnimationDemo.h  FluBusyProgressRingDemo.cpp  FluBusyProgressRingDemo.h  FluButtonDemo.cpp  FluButtonDemo.h  FluCalendarDatePickerDemo.cpp  FluCalendarDatePickerDemo.h  FluCalendarViewDemo.cpp  FluCalendarViewDemo.h  FluChangeBackgroundWidget.cpp  FluChangeBackgroundWidget.h  FluChangeBgDemo.cpp  FluChangeBgDemo.h  FluCheckBoxDemo.cpp  FluCheckBoxDemo.h  FluColorDemo.cpp  FluColorDemo.h  FluColorExampleWidget.cpp  FluColorExampleWidget.h  FluColorViewDemo.cpp  FluColorViewDemo.h  FluComboBoxDemo.cpp  FluComboBoxDemo.h  FluDemo.cpp  FluDemo.h  FluDisplay16.cpp  FluDisplay16.h  FluDisplay9.cpp  FluDisplay9.h  FluDisplayBoxDemo.cpp  FluDisplayBoxDemo.h  FluDisplayCodeDemo.cpp  FluDisplayCodeDemo.h  FluDisplayIconBoxDemo.cpp  FluDisplayIconBoxDemo.h  FluDropDownButtonDemo.cpp  (+107 more)
FluIconTool/: CMakeLists.txt  FluIconTool.vcxproj  FluIconTool.vcxproj.filters  FluIconToolWidget.cpp  FluIconToolWidget.h  FluTempDemo.cpp  FluTempDemo.h  main.cpp
FluUtils/: CMakeLists.txt  FluConfigUtils.cpp  FluConfigUtils.h  FluIconUtils.cpp  FluIconUtils.h  FluLogUtils.cpp  FluLogUtils.h  FluObjectPtrUtils.cpp  FluObjectPtrUtils.h  FluStyleSheetUitls.cpp  FluStyleSheetUitls.h  FluThemeUtils.cpp  FluThemeUtils.h  FluUtils.h  FluUtils.vcxproj  FluUtils.vcxproj.filters  FluUtilsFonts.qrc  flu_utils_fonts.qrc
FluWinGallery/: CMakeLists.txt  FluAEmptyPage.cpp  FluAEmptyPage.h  FluATitlePage.cpp  FluATitlePage.h  FluAllSamplesPage.cpp  FluAllSamplesPage.h  FluAppBarButtonPage.cpp  FluAppBarButtonPage.h  FluAppBarToggleButtonPage.cpp  FluAppBarToggleButtonPage.h  FluAutoSuggestBoxPage.cpp  FluAutoSuggestBoxPage.h  FluBasicInputPage.cpp  FluBasicInputPage.h  FluBorderPage.cpp  FluBorderPage.h  FluButtonPage.cpp  FluButtonPage.h  FluCalendarDatePickerPage.cpp  FluCalendarDatePickerPage.h  FluCalendarViewPage.cpp  FluCalendarViewPage.h  FluCheckBoxPage.cpp  FluCheckBoxPage.h  FluCollectionsPage.cpp  FluCollectionsPage.h  FluComboBoxPage.cpp  FluComboBoxPage.h  FluContentDialogPage.cpp  FluContentDialogPage.h  FluDateAndTimePage.cpp  FluDateAndTimePage.h  FluDatePickerPage.cpp  FluDatePickerPage.h  FluDialogsAndFlyoutsPage.cpp  FluDialogsAndFlyoutsPage.h  FluDropDownButtonPage.cpp  FluDropDownButtonPage.h  FluExpanderPage.cpp  (+88 more)
StyleSheet/: FluGalleryWindow.qss  FluHomePage.qss  FluNavigationItem.qss  FluNavigationView.qss
StyleSheet/dark/: FluAEmptyPage.qss  FluATitlePage.qss  FluAllSamplesPage.qss  FluAmPmView.qss  FluAppBarButton.qss  FluAppBarButtonPage.qss  FluAppBarToggleButton.qss  FluAppBarToggleButtonPage.qss  FluAutoSuggestBox.qss  FluAutoSuggestBoxPage.qss  FluBasicInputPage.qss  FluBorder.qss  FluBorderPage.qss  FluBusyProgressRing.qss  FluButtonPage.qss  FluCalendarDatePicker.qss  FluCalendarDatePickerPage.qss  FluCalendarMonthScrollView.qss  FluCalendarMonthView.qss  FluCalendarSelectMonthView.qss  FluCalendarSelectYearView.qss  FluCalendarView.qss  FluCalendarViewPage.qss  FluCalendarViewTitle.qss  FluCalendarViewWeakTitle.qss  FluCheckBox.qss  FluCheckBoxPage.qss  FluCircleDot.qss  FluCodeBox.qss  FluCollectionsPage.qss  FluColorFlyout.qss  FluComboBox.qss  FluComboBoxEx.qss  FluComboBoxPage.qss  FluConfirmFlyout.qss  FluContentDialogPage.qss  FluDateAndTimePage.qss  FluDatePicker.qss  FluDatePickerPage.qss  FluDatePickerView.qss  (+111 more)
StyleSheet/light/: FluAEmptyPage.qss  FluATitlePage.qss  FluAllSamplesPage.qss  FluAmPmView.qss  FluAppBarButton.qss  FluAppBarButtonPage.qss  FluAppBarToggleButton.qss  FluAppBarToggleButtonPage.qss  FluAutoSuggestBox.qss  FluAutoSuggestBoxPage.qss  FluBasicInputPage.qss  FluBorder.qss  FluBorderPage.qss  FluBusyProgressRing.qss  (+153 more)
code/: 1.md  AppBarButtonPageCode1.md  BorderPageCode1.md  ButtonPageCode1  ButtonPageCode1.md  ButtonPageCode2  ButtonPageCode2.md  ButtonPageCode3  ButtonPageCode3.md  CalendarDatePickerPageCode1.md  CalendarViewPageCode1.md  CheckBoxPageCode1.md  CheckBoxPageCode2.md  ComboBoxPageCode1.md  ContentDialogPageCode1.md  DatePickerPageCode1.md  DropDownButtonCode1  DropDownButtonPageCode1.md  DropDownButtonPageCode2  DropDownButtonPageCode2.md  ExpanderPageCode1.md  ExpanderPageCode2.md  ExpanderPageCode3.md  FlipViewPageCode1.md  FlipViewPageCode2.md  FluSliderPageCode1  FluSliderPageCode2  FlyoutPageCode1.md  HyperLinkButtonPageCode1  HyperLinkButtonPageCode1.md  InfoBadgePageCode1.md  InfoBarPageCode1.md  InfoBarPageCode2.md  ListViewPageCode1.md  MenuBarPageCode1.md  MenuBarPageCode2.md  NumberBoxPageCode1.md  NumberBoxPageCode2.md  PasswordBoxPageCode1.md  PasswordBoxPageCode2.md  (+20 more)
config/: cpp.ini  onedark.xml
docs/: change code to utf-8.md  refrence.md
tools/: translators.py
