cmake_path(GET CMAKE_CURRENT_LIST_DIR FILENAME ModName)
string(REPLACE " " "_" ModName ${ModName})

set(TGT ${ModName})
message("ModName: ${ModName}")

FILE(GLOB DIR_SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
    "*.h"
    "*.cpp"
)

message("qt_add_library(\${TGT} STATIC")
    foreach(f ${DIR_SRCS})
    message("    \"${f}\"")
    endforeach()
message(")")

qt_add_library(${TGT}
    STATIC 
    ${DIR_SRCS}
)
qt_add_resources(${TGT} "FluControlsQss"
    PREFIX "/"
    BASE ".."
    FILES
    "../StyleSheet/dark/FluAmPmView.qss"
    "../StyleSheet/dark/FluAppBarButton.qss"
    "../StyleSheet/dark/FluAppBarToggleButton.qss"
    "../StyleSheet/dark/FluAutoSuggestBox.qss"
    "../StyleSheet/dark/FluCalendarDatePicker.qss"
    "../StyleSheet/dark/FluCalendarMonthView.qss"
    "../StyleSheet/dark/FluCalendarSelectMonthView.qss"
    "../StyleSheet/dark/FluCalendarSelectYearView.qss"
    "../StyleSheet/dark/FluCalendarView.qss"
    "../StyleSheet/dark/FluCalendarViewTitle.qss"
    "../StyleSheet/dark/FluCalendarViewWeakTitle.qss"
    "../StyleSheet/dark/FluCheckBox.qss"
    "../StyleSheet/dark/FluCodeBox.qss"
    "../StyleSheet/dark/FluColorFlyout.qss"
    "../StyleSheet/dark/FluComboBox.qss"
    "../StyleSheet/dark/FluComboBoxEx.qss"
    "../StyleSheet/dark/FluConfirmFlyout.qss"
    "../StyleSheet/dark/FluDatePicker.qss"
    "../StyleSheet/dark/FluDatePickerView.qss"
    "../StyleSheet/dark/FluDisplayBox.qss"
    "../StyleSheet/dark/FluDisplayBoxEx.qss"
    "../StyleSheet/dark/FluDisplayIconBox.qss"
    "../StyleSheet/dark/FluDoubleSpinBox.qss"
    "../StyleSheet/dark/FluDropDownButton.qss"
    "../StyleSheet/dark/FluExpander.qss"
    "../StyleSheet/dark/FluFlipView.qss"
    "../StyleSheet/dark/FluFWScrollView.qss"
    "../StyleSheet/dark/FluGraphicalButton.qss"
    "../StyleSheet/dark/FluHCard.qss"
    "../StyleSheet/dark/FluHSplitLine.qss"
    "../StyleSheet/dark/FluHyperLinkButton.qss"
    "../StyleSheet/dark/FluIconButton.qss"
    "../StyleSheet/dark/FluLabel.qss"
    "../StyleSheet/dark/FluLineEdit.qss"
    "../StyleSheet/dark/FluListView.qss"
    "../StyleSheet/dark/FluLoopView.qss"
    "../StyleSheet/dark/FluMenu.qss"
    "../StyleSheet/dark/FluMenuBar.qss"
    "../StyleSheet/dark/FluMessageBox.qss"
    "../StyleSheet/dark/FluNavigationItem.qss"
    "../StyleSheet/dark/FluPasswordBox.qss"
    "../StyleSheet/dark/FluPivot.qss"
    "../StyleSheet/dark/FluPivotTitleBar.qss"
    "../StyleSheet/dark/FluPivotTitleBarItem.qss"
    "../StyleSheet/dark/FluPushButton.qss"
    "../StyleSheet/dark/FluRadioButton.qss"
    "../StyleSheet/dark/FluRepeatButton.qss"
    "../StyleSheet/dark/FluSearchLineEdit.qss"
    "../StyleSheet/dark/FluSettingsLabelBox.qss"
    "../StyleSheet/dark/FluSettingsSelectBox.qss"
    "../StyleSheet/dark/FluShortInfoBar.qss"
    "../StyleSheet/dark/FluSlider.qss"
    "../StyleSheet/dark/FluSpinBox.qss"
    "../StyleSheet/dark/FluSplitButton.qss"
    "../StyleSheet/dark/FluStyleButton.qss"
    "../StyleSheet/dark/FluTabWidget.qss"
    "../StyleSheet/dark/FluTextEdit.qss"
    "../StyleSheet/dark/FluTimePicker24H.qss"
    "../StyleSheet/dark/FluTimePicker24HView.qss"
    "../StyleSheet/dark/FluTimePickerAP.qss"
    "../StyleSheet/dark/FluTimePickerAPView.qss"
    "../StyleSheet/dark/FluToggleButton.qss"
    "../StyleSheet/dark/FluToggleSwitch.qss"
    "../StyleSheet/dark/FluVCard.qss"
    "../StyleSheet/dark/FluVFlipView.qss"
    "../StyleSheet/dark/FluVFlyout.qss"
    "../StyleSheet/dark/FluVNavigationFlyIconTextItem.qss"
    "../StyleSheet/dark/FluVNavigationIconTextItem.qss"
    "../StyleSheet/dark/FluVNavigationMenuItem.qss"
    "../StyleSheet/dark/FluVNavigationSearchItem.qss"
    "../StyleSheet/dark/FluVNavigationSettingsItem.qss"
    "../StyleSheet/dark/FluVNavigationView.qss"
    "../StyleSheet/dark/FluVRadioGroupBox.qss"
    "../StyleSheet/dark/FluVScrollView.qss"
    "../StyleSheet/dark/FluVSplitLine.qss"
    "../StyleSheet/light/FluAmPmView.qss"
    "../StyleSheet/light/FluAppBarButton.qss"
    "../StyleSheet/light/FluAppBarToggleButton.qss"
    "../StyleSheet/light/FluAutoSuggestBox.qss"
    "../StyleSheet/light/FluBorder.qss"
    "../StyleSheet/light/FluCalendarDatePicker.qss"
    "../StyleSheet/light/FluCalendarMonthView.qss"
    "../StyleSheet/light/FluCalendarSelectMonthView.qss"
    "../StyleSheet/light/FluCalendarSelectYearView.qss"
    "../StyleSheet/light/FluCalendarView.qss"
    "../StyleSheet/light/FluCalendarViewTitle.qss"
    "../StyleSheet/light/FluCalendarViewWeakTitle.qss"
    "../StyleSheet/light/FluCheckBox.qss"
    "../StyleSheet/light/FluCodeBox.qss"
    "../StyleSheet/light/FluColorButton.qss"
    "../StyleSheet/light/FluColorFlyout.qss"
    "../StyleSheet/light/FluColorLabel.qss"
    "../StyleSheet/light/FluComboBox.qss"
    "../StyleSheet/light/FluComboBoxEx.qss"
    "../StyleSheet/light/FluConfirmFlyout.qss"
    "../StyleSheet/light/FluDatePicker.qss"
    "../StyleSheet/light/FluDatePickerView.qss"
    "../StyleSheet/light/FluDisplayBox.qss"
    "../StyleSheet/light/FluDisplayBoxEx.qss"
    "../StyleSheet/light/FluDisplayIconBox.qss"
    "../StyleSheet/light/FluDoubleSpinBox.qss"
    "../StyleSheet/light/FluDropDownButton.qss"
    "../StyleSheet/light/FluExpander.qss"
    "../StyleSheet/light/FluFWScrollView.qss"
    "../StyleSheet/light/FluGraphicalButton.qss"
    "../StyleSheet/light/FluHCard.qss"
    "../StyleSheet/light/FluHFlipView.qss"
    "../StyleSheet/light/FluHNavigationFlyIconTextItem.qss"
    "../StyleSheet/light/FluHNavigationIconTextItem.qss"
    "../StyleSheet/light/FluHNavigationMoreItem.qss"
    "../StyleSheet/light/FluHNavigationSettingsItem.qss"
    "../StyleSheet/light/FluHNavigationView.qss"
    "../StyleSheet/light/FluHScrollView.qss"
    "../StyleSheet/light/FluHSplitLine.qss"
    "../StyleSheet/light/FluHyperLinkButton.qss"
    "../StyleSheet/light/FluIconButton.qss"
    "../StyleSheet/light/FluInfoBadge.qss"
    "../StyleSheet/light/FluLabel.qss"
    "../StyleSheet/light/FluLineEdit.qss"
    "../StyleSheet/light/FluListView.qss"
    "../StyleSheet/light/FluLoopView.qss"
    "../StyleSheet/light/FluMenu.qss"
    "../StyleSheet/light/FluMenuBar.qss"
    "../StyleSheet/light/FluMenuBarItem.qss"
    "../StyleSheet/light/FluMessageBox.qss"
    "../StyleSheet/light/FluPasswordBox.qss"
    "../StyleSheet/light/FluPivot.qss"
    "../StyleSheet/light/FluPivotTitleBar.qss"
    "../StyleSheet/light/FluPivotTitleBarItem.qss"
    "../StyleSheet/light/FluProgressBar.qss"
    "../StyleSheet/light/FluPushButton.qss"
    "../StyleSheet/light/FluRadioButton.qss"
    "../StyleSheet/light/FluRatingControl.qss"
    "../StyleSheet/light/FluRepeatButton.qss"
    "../StyleSheet/light/FluRotationButton.qss"
    "../StyleSheet/light/FluSearchLineEdit.qss"
    "../StyleSheet/light/FluSettingsLabelBox.qss"
    "../StyleSheet/light/FluSettingsSelectBox.qss"
    "../StyleSheet/light/FluShortInfoBar.qss"
    "../StyleSheet/light/FluSlider.qss"
    "../StyleSheet/light/FluSpinBox.qss"
    "../StyleSheet/light/FluSplitButton.qss"
    "../StyleSheet/light/FluStyleButton.qss"
    "../StyleSheet/light/FluTabBar.qss"
    "../StyleSheet/light/FluTabBarContent.qss"
    "../StyleSheet/light/FluTabBarItem.qss"
    "../StyleSheet/light/FluTabView.qss"
    "../StyleSheet/light/FluTabWidget.qss"
    "../StyleSheet/light/FluTextEdit.qss"
    "../StyleSheet/light/FluTimePicker24H.qss"
    "../StyleSheet/light/FluTimePicker24HView.qss"
    "../StyleSheet/light/FluTimePickerAP.qss"
    "../StyleSheet/light/FluTimePickerAPView.qss"
    "../StyleSheet/light/FluToggleButton.qss"
    "../StyleSheet/light/FluToggleSwitch.qss"
    "../StyleSheet/light/FluVCard.qss"
    "../StyleSheet/light/FluVFlipView.qss"
    "../StyleSheet/light/FluVFlyout.qss"
    "../StyleSheet/light/FluVNavigationFlyIconTextItem.qss"
    "../StyleSheet/light/FluVNavigationIconTextItem.qss"
    "../StyleSheet/light/FluVNavigationMenuItem.qss"
    "../StyleSheet/light/FluVNavigationSearchItem.qss"
    "../StyleSheet/light/FluVNavigationSettingsItem.qss"
    "../StyleSheet/light/FluVNavigationView.qss"
    "../StyleSheet/light/FluVRadioGroupBox.qss"
    "../StyleSheet/light/FluVScrollView.qss"
    "../StyleSheet/light/FluVSplitLine.qss"
)

target_link_libraries(${TGT}
    PUBLIC
    framelesshelper
    FluUtils
)
